# Hamming_kurs

./: Cargo.toml
src/: bitvec.rs  channel.rs  hamessage.rs  lib.rs  main.rs  randseq.rs
src/block/: hamming.rs
src/cyclic/: fifteeneleven.rs  mod.rs  sevenfour.rs  thirtyonetwentysix.rs
